# tensorbuffers

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  rustfmt.toml  schema.fbs
.devcontainer/: devcontainer.json  startup.sh
docs/: README.md  components.md  data_format.md
src/: constants.rs  generated.rs  lib.rs  num_trait.rs  tensor.rs  tensor_buffers.rs  tensor_buffers_file.rs  tensor_buffers_reader.rs  tensor_buffers_writer.rs  tensor_operation.rs  types.rs  utils.rs
